@@ -1,6 +1,9 @@
 libstream-perl (0.9.0) UNRELEASED; urgency=low
 
   * 'does' method in Stream::Base - not Moose yet, but at least we'll get roles
+  * Stream::Mixin::Filterable renamed to Stream::In::Role::Filterable,
+    Stream::Mixin::Lag renamed to Stream::In::Role::Lag,
+    Stream::Mixin::Shift renamed to Stream::In::Role::Shift
 
  -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Wed, 11 Aug 2010 19:54:53 +0400
 
